Create Model, DbContext, Service, Controller

--- a/NpgsqlGeometry/appsettings.json
+++ b/NpgsqlGeometry/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocationDbConnectionString": "Host=localhost; Port=5432; Database=TagCentralDB; Username=postgres; Password=root; Pooling=true;"
+  }
 }
